--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.9",
     "@radix-ui/react-hover-card": "^1.1.7",
+    "@radix-ui/react-popover": "^1.1.9",
     "@radix-ui/react-separator": "^1.1.3",
     "class-variance-authority": "^0.7.1",
+    "cmdk": "^1.1.1",
     "lucide-react": "^0.487.0",
     "next": "15.2.5",
     "react": "^19.0.0",
